tests/liquid/pos/arrays/arr-00.js

/*@ foo :: ({[number]|(len v)>0}) => { number | true } */
function foo(a) {

  return a[0];

}
